--- a/01-equations/03-sinusoid.ipynb
+++ b/01-equations/03-sinusoid.ipynb
@@ -10,7 +10,7 @@
    "id": "0511476d-cb82-4033-bd00-57100a21f1d7",
    "metadata": {},
    "source": [
-    "# Lesson 01. Part 3. Sinusoid\n",
+    "# Tutorial 01-03. Sinusoid\n",
     "\n",
     "Could we build a sinusoid ```y = a * sin(x + b)```? Let's try\n",
     "\n",
