--- a/01-equations/04-just-math.ipynb
+++ b/01-equations/04-just-math.ipynb
@@ -5,7 +5,7 @@
    "id": "fe32fc24-4d51-40b3-9f3a-d1bead488411",
    "metadata": {},
    "source": [
-    "# Lesson 01. Part 4. Universal linear equation\n",
+    "# Tutorial 01-04. Universal linear equation\n",
     "\n",
     "Let's try to build a universal linear equation: ```y = kx + b```. The thing is that we don't need to train a neaural network for this. It's much easier to achieve it with a simple math. How can we do this?\n",
     "\n",
