--- a/01-equations/01-linear-equation.ipynb
+++ b/01-equations/01-linear-equation.ipynb
@@ -10,7 +10,7 @@
    "id": "0511476d-cb82-4033-bd00-57100a21f1d7",
    "metadata": {},
    "source": [
-    "# Lesson 01. Part 1. Linear equation\n",
+    "# Tutorial 01-01. Linear equation\n",
     "\n",
     "The purpose of this notebook is to understand how an AI (neural network) can construct a line based on a sample of points.\n",
     "The expected result is shown on the image below:\n",
