--- a/01-equations/02-quadratic-equation.ipynb
+++ b/01-equations/02-quadratic-equation.ipynb
@@ -10,7 +10,7 @@
    "id": "0511476d-cb82-4033-bd00-57100a21f1d7",
    "metadata": {},
    "source": [
-    "# Lesson 01. Part 2. Quadratic equation\n",
+    "# Tutorial 01-02. Quadratic equation\n",
     "\n",
     "Let's try to build a model that can extrapolate a quadratic equation: ```ax^2 + bx + c```\n",
     "\n",
